Fix gap on vertical menus and only load style if not loaded before

--- a/include/style.css
+++ b/include/style.css
@@ -157,9 +157,14 @@ header .wp-block-group-is-layout-flex .wp-block-image, header .wp-block-site-log
 	.widget.navigation .wp-block-navigation
 	{
 		align-items: baseline;
-		gap: inherit;
+		gap: unset;
 		z-index: 1000;
 	}
+
+		.widget.navigation.is_vertical .wp-block-navigation
+		{
+			gap: unset;
+		}
 
 	.widget.navigation .wp-block-navigation__responsive-container
 	{
